--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
     "concurrently": "^8.2.2"
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/d3-scale": "^4.0.9",
+    "@types/node": "^20.19.11"
   }
 }
